--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                         <span class="legenda"><STRONG>1.  DEFINIZIONE STRATEGIE</STRONG></a></span>
                         </br>
                         </br>
-                        <span class="legenda">&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/2_1_0_policentrismoereticolaritaunnuovomodellodianalisi.html', 'Policentrismo e reticolarit‡: un nuovo modello di analisi', 'width=950, height=750, resizable, status, scrollbars=1, location');"> POLICENTRISMO E RETICOLARIT¿</a></span>
+                        <span class="legenda">&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/2_1_0_policentrismoereticolaritaunnuovomodellodianalisi.html', 'Policentrismo e reticolarit√†: un nuovo modello di analisi', 'width=950, height=750, resizable, status, scrollbars=1, location');"> POLICENTRISMO E RETICOLARIT√Ä</a></span>
                         </br>
                         <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/2_1_1_mondializzazione.html', 'Mondializzazione', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>Mondializzazione</i></a></span>
                         </br>
-                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/2_1_2_urbanita.html', 'Urbanit‡', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>Urbanit‡</i></a></span>
+                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/2_1_2_urbanita.html', 'Urbanit√†', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>Urbanit√†</i></a></span>
                         </br>
                         <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/2_1_3_inlineaconloschemadisviluppodellospazioeuropeo.html', ' In linea con lo Schema di Sviluppo dello Spazio Europeo', 'width=950, height=750, resizable, status, scrollbars=1, location');">  <i>Schema Sviluppo Spazio Europeo</i></a></span>
                         </br>
@@ -197,7 +197,7 @@
                         </br>
                         <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/3_1_0_icorpisanti.html', 'Evoluzione Corpi santi', 'width=950, height=750, resizable, status, scrollbars=1, location');"><i> Evoluzione Corpi Santi</i></a></span>
                         </br>
-                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/3_1_1_rapportodeicorpisanticonlacitta.html', 'Rapporto dei Corpi Santi con la citt‡', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>Rapporto con la citt‡</i></a></span>
+                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/3_1_1_rapportodeicorpisanticonlacitta.html', 'Rapporto dei Corpi Santi con la citt√†', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>Rapporto con la citt√†</i></a></span>
                         </br>
                         <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/3_1_2_ilcorposantodicolognolaelaferrovianell800.html', 'Il Corpo Santo di Colognola e la ferrovia nell 800 ', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>Colognola e la ferrovia nell'800 </i></a></span>
                         </br>
@@ -220,7 +220,7 @@
                         </br>
                         <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/3_4_2_lacartografiaigm18891971.html', 'La cartografia I.G.M. 1889-1971', 'width=1050, height=750, resizable, status, scrollbars=1, location');"> <i> Cartografia I.G.M. 1889-1971 </i></a></span>
                         </br></br>
-                        <span class="legenda"> <STRONG>3. CRITICIT¿ PERIFERIA SUD-OCCIDENTALE</STRONG></a></span>
+                        <span class="legenda"> <STRONG>3. CRITICIT√Ä PERIFERIA SUD-OCCIDENTALE</STRONG></a></span>
                         </br>		</br>
                         <span class="legenda">&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/4_1_0_edificidismessieobsoletiattornoexgres.html', '   Le periferie di Bergamo oggi', 'width=950, height=750, resizable, status, scrollbars=1, location');"> EDIFICI DISMESSI-OBSOLETI VICINO EX GRES</a></span>
                         </br>
@@ -229,23 +229,23 @@
                         <br>
                         <span class="legenda">&nbsp; &nbsp; &nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/4_1_2_ilmetodorifo.html', ' Il metodo RIFO', 'width=950, height=750, resizable, status, scrollbars=1, location');"><i> Ricentramento del metodo RIFO </i></a></span>
                         <br>
-                        <span class="legenda">&nbsp; &nbsp;  ANALISI VERDE URBANO E MOBILIT¿ </a></span>
+                        <span class="legenda">&nbsp; &nbsp;  ANALISI VERDE URBANO E MOBILIT√Ä </a></span>
                         </br>
                         <input type="checkbox" id="kml-bergamo_4_2_1_Contestoattualeparchiareeverdiorti-check" onclick="toggleGeojson_parchi('bergamo_4_2_1_Contestoattualeparchiareeverdiorti')">
                         <span class="legenda"><a href="javascript:;" onClick="window.open('projects/4_2_1_contestoattualeparchiareeverdieortiurbani.html', ' Contesto attuale: parchi, aree verdi e orti urbani', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Parchi, aree verdi e orti urbani</i></a></span>
                         </br>
                         <input type="checkbox" id="kml-bergamo_mobilita_pubblica_e_green_ok-check" onclick="toggleGeojson_mob('bergamo_mobilita_pubblica_e_green_ok')">
-                        <span class="legenda"><a href="javascript:;" onClick="window.open('projects/4_2_2_mobilitapubblicaegreen.html', ' Mobilit‡ pubblica e greeni', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Mobilit‡ pubblica e green</i></a></span>
+                        <span class="legenda"><a href="javascript:;" onClick="window.open('projects/4_2_2_mobilitapubblicaegreen.html', ' Mobilit√† pubblica e greeni', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Mobilit√† pubblica e green</i></a></span>
                         </br>
-                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/4_2_4_criticitadelleinfrastrutturedellamobilita.html', '  Criticit‡ delle infrastrutture della mobilit‡', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Criticit‡ della mobilit‡</i></a></span>
+                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/4_2_4_criticitadelleinfrastrutturedellamobilita.html', '  Criticit√† delle infrastrutture della mobilit√†', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Criticit√† della mobilit√†</i></a></span>
                         </br>
-                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/4_2_3_progettualitagreenilparcolineare.html', '  Progettualit‡ green: il parco lineare', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Progettualit‡ green: "parco lineare"</i></a></span>
+                        <span class="legenda">&nbsp; &nbsp;&nbsp; &nbsp;<a href="javascript:;" onClick="window.open('projects/4_2_3_progettualitagreenilparcolineare.html', '  Progettualit√† green: il parco lineare', 'width=950, height=750, resizable, status, scrollbars=1, location');"> <i>  Progettualit√† green: "parco lineare"</i></a></span>
                     </div>
                     </br>
                     <STRONG>PROGETTUALITA' EX-GRES</STRONG>
                     <br>
                     </br>	
-                    <span class="legenda"><a href="javascript:;" onClick="window.open('projects/5_2_2_nuovepolarita.html', 'Nuove polarit‡', 'width=950, height=750, resizable, status, scrollbars=1, location');"><STRONG>1. LA POLARIT¿ DEL PALAGHIACCIO</STRONG></a></span>
+                    <span class="legenda"><a href="javascript:;" onClick="window.open('projects/5_2_2_nuovepolarita.html', 'Nuove polarit√†', 'width=950, height=750, resizable, status, scrollbars=1, location');"><STRONG>1. LA POLARIT√Ä DEL PALAGHIACCIO</STRONG></a></span>
                     </br>	
                     </br>
                     <span class="legenda"><STRONG>2. LA RETICOLARITA' SLOW</STRONG></a></span>
@@ -309,7 +309,7 @@
 
         <!-- <div class="Stile3">
             <br>
-            RIFO3D Ë ottimizzato per il 
+            RIFO3D √® ottimizzato per il 
             browser Firefox! 
             Risoluzione schermo 
             consigliata 1024x760
