--- a/index.html
+++ b/index.html
@@ -351,6 +351,12 @@
 			</script>
 
 			<div id="map3d" style="width: 100%; height: 100%;"></div>
+            <div id="legendidro" class="legend1"></div>
+            <div id="legenderp" class="legend2"></div>
+            <div id="legendgreen" class="legend3"></div>
+            <div id="legendmoby" class="legend4"></div>
+            
+
 
 		</div>
     </body>
