WIP adding flytos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-md-4">
                     <center>
-                        <a href="http://www.rifoit.org/ex_gres/cybermap_areaexgres/cybermap_areaexgres.html" target="_blank"><img src="images/titolo.png"  border="0" style="width:47vh"> </a>
+                        <a href="descr/cybermap_areaexgres.html" target="_blank"><img src="images/titolo.png"  border="0" style="width:47vh"> </a>
                     </center>
                 </div>
                 <div class="col-md-1" style="margin-top:1%;">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-md-1">
                     <center>
-                        <a href="http://www.rifoit.org/rifo3d/index_pro.html" target="_blank"><img src="images/bannerrifo.png" border="0" style="margin-top:1%;width: 10vh;"></a>
+                        <a href="http://rifoit.org/index.php/rifo-3d/" target="_blank"><img src="images/bannerrifo.png" border="0" style="margin-top:1%;width: 10vh;"></a>
                     </center>
                 </div>
                 <div class="col-md-1">
@@ -73,18 +73,18 @@
         <div id="layersonoff">
         <div class="uk-grid legct" >
             <div class="uk-width-1-4 Stile3">
-                <span class="legenda-title"> <STRONG>GRADO DI OPERATIVITA'</STRONG></span>
+                <a href="descr/gradooperativita.html" target="_blank"><span class="legenda-title"> <STRONG>GRADO DI OPERATIVITA'</STRONG></span></a>
                 <div class="earthtoggles">
                     <div>
                         <img src="images/legenda/aree_obsolete.png" style="width: 100px"  /> <img src="images/legenda/aree_dismesse.png" style="width: 100px"  />
                     </div>
                     <STRONG>BERGAMO</STRONG>
                     <div>
-                        <input type="checkbox" id="Geojson-bergamo_obsoleto-check" onclick="toggleGeojson('bergamo_obsoleto')">
+                        <input type="checkbox" id="Geojson-bergamo_obsoleto-check" onclick="toggleGeojson('bergamo_obsoleto')" checked>
                         <span class="legenda"><a href="javascript:;" onClick="window.open('images/image_obsoleto/bergamo_obsoleto.html', 'Bergamo Obsoleto', 'width=450, height=450, resizable, status, scrollbars=1, location');"> Obsoleto</a></span>
                     </div>
                     <div>
-                        <input type="checkbox" id="Geojson-bergamo_dismesso-check" onclick="toggleGeojson('bergamo_dismesso')">
+                        <input type="checkbox" id="Geojson-bergamo_dismesso-check" onclick="toggleGeojson('bergamo_dismesso')" checked>
                         <span class="legenda"><a href="javascript:;" onClick="window.open('images/image_dismesso/bergamo_dismesso.html', 'Bergamo Dismesso', 'width=450, height=450, resizable, status, scrollbars=1, location');"> Dismesso</a></span>
                     </div><!-- 
                     <div>
@@ -98,7 +98,7 @@
                     </div>
                     <div>
 
-                        <input type="checkbox" id="Geojson-bergamo_area_exgres_edprogetto-check" onclick="toggleGeojson('bergamo_area_exgres_edprogetto')">
+                        <input type="checkbox" id="Geojson-bergamo_area_exgres_edprogetto-check" onclick="toggleGeojson('bergamo_area_exgres_edprogetto')" checked>
                         <span class="legenda">Edifici in progetto (Concept Generale)</span>
                     </div>
                     </br>
@@ -130,7 +130,7 @@
                     </div>
                     <div>
                         </br>
-                        <span class="legenda"><a > <STRONG>2. ANALISI TESSUTI STORICI</STRONG></a></span>
+                        <span class="legenda"><STRONG>2. ANALISI TESSUTI STORICI</STRONG></span>
                     </div>
                     <div>
                         </br>
